# turbo-octo-robot

./: .gitignore  BEFORE_AFTER.md  CHANGELOG.md  CODEBASE_ANALYSIS.md  CODEBASE_CONFORMANCE_AUDIT.md  DEPENDENCY_CLEANUP_PLAN.md  ENHANCEMENTS_2024.md  EXECUTIVE_DECISION_SUMMARY.md  EXECUTIVE_SUMMARY.md  FEATURE_MATRIX_COMPARISON.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP_2026.md  IMPLEMENTATION_SUMMARY_V2.md  INDEX_ANALYSIS_DOCUMENTS.md  INSTALL.md  LICENSE  MANIFEST.in  MIGRATION_GUIDE.md  PHASES_4_5_COMPLETION.md  PHASES_6_7_COMPLETION.md  PHASE_0_EXECUTION.md  PHASE_6_POSTMERGE_COMMUNICATION.md  PHASE_7_MONITORING_SUPPORT.md  POST_MERGE_INTEGRATION_PLAN.md  PROJECT_SUMMARY.md  PR_DESCRIPTION.md  QUICK_REFERENCE_CARD.md  README.md  STANDALONE_ERP_CMS_STRATEGY.md  V2_TRANSFORMATION_COMPLETE.md  VISUAL_COMPARISON.md  package-lock.json  package.json  pyproject.toml  report.md  requirements.txt  research.html  setup.py
.github/: CI_CD_UPDATES.md
.github/workflows/: code-quality.yml  test-standalone.yml  verify-dependencies.yml
docs/: API.md  API_v2.md  ARCHITECTURE.md  CONFIGURATION.md  CONTACT_GUIDE.md  QUICKSTART.md
ma_advisory/: DEPRECATED.md  __init__.py  boot.py  hooks.py
ma_advisory/api/: __init__.py
ma_advisory/config/: desktop.py
ma_advisory/config/doctype/: white_label_settings.json  white_label_settings.py
ma_advisory/contact_management/: __init__.py  api.py  relationship_intelligence.py
ma_advisory/contact_management/doctype/ma_company/: ma_company.json  ma_company.py  ma_company_deal_link.json
ma_advisory/contact_management/doctype/ma_contact/: ma_contact.json  ma_contact.py
ma_advisory/contact_management/doctype/ma_interaction/: ma_interaction.json  ma_interaction.py
ma_advisory/contact_management/doctype/ma_sector/: ma_sector.json  ma_sector.py
ma_advisory/dashboards/: __init__.py  client_dashboard.py  lead_dashboard.py
ma_advisory/deal_management/doctype/: deal.json  deal.py
ma_advisory/deal_management/doctype/deal_team_member/: deal_team_member.json  deal_team_member.py
ma_advisory/deal_management/page/deal_pipeline/: deal_pipeline.css  deal_pipeline.js  deal_pipeline.json
ma_advisory/document_management/: __init__.py  api.py
ma_advisory/document_management/doctype/ma_document/: ma_document.json  ma_document.py  ma_document_version.json
ma_advisory/due_diligence/doctype/due_diligence_item/: due_diligence_item.json  due_diligence_item.py
ma_advisory/prospecting/: __init__.py  api.py
ma_advisory/public/css/: ma_advisory.css
ma_advisory/public/js/: ma_advisory.js
ma_advisory/public/js/doctype/: deal.js
ma_advisory/tasks/: __init__.py  daily.py  weekly.py
ma_advisory/translations/: fr.csv
ma_advisory/valuation/doctype/: __init__.py  valuation.json  valuation.py
standalone/: .coverage  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
standalone/alembic/: env.py
standalone/app/: auth.py  config.py  constants.py  db.py  email_providers.py  main.py  models.py  schemas.py  security.py  storage.py
standalone/app/models/: __init__.py  auth.py  base.py  crm.py  deals.py  docs.py  finance.py  integrations.py  projects.py  reporting.py  workflows.py
standalone/app/routers/: accounts.py  audit.py  auth.py  companies.py  contacts.py  deals.py  documents.py  email.py  export.py  finance.py  import_.py  interactions.py  invoices.py  oauth.py  projects.py  shares.py  tenant_settings.py  tenants.py
standalone/app/schemas/: __init__.py  core.py  deals.py  finance.py  projects.py
standalone/app/services/: base_repository.py  crm.py  deals.py  finance.py  projects.py
standalone/app/utils/: __init__.py  audit.py  export.py  import_.py  watermark.py
standalone/tests/: conftest.py  test_api.py  test_coverage_100.py  test_deals.py  test_extended.py  test_finance.py  test_import.py  test_legacy.py  test_models.py  test_models_extended.py  test_projects.py  test_services.py
(+5 files in other folders)
