[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ma_advisory"
version = "1.0.0"
description = "M&A Advisory ERP - A derivative of ERPNext for mid-cap M&A advisory firms"
authors = [
    {name = "Custom", email = "contact@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "frappe>=14.0.0",
    "erpnext>=14.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[project.urls]
Homepage = "https://github.com/mitchlabeetch/turbo-octo-robot"
Documentation = "https://github.com/mitchlabeetch/turbo-octo-robot/wiki"
Repository = "https://github.com/mitchlabeetch/turbo-octo-robot"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["ma_advisory/tests"]
python_files = "test_*.py"
