[project]
name = "ma-advisory-standalone"
version = "0.1.0"
description = "Standalone M&A Advisory CRM+ERP core services"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
    "psycopg2-binary>=2.9.9",
    "python-dateutil>=2.9.0",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0"
]
watermarking = [
    "PyPDF2>=3.0.0",
    "reportlab>=4.0.0"
]

[tool.ruff]
line-length = 100
