[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "ma-advisory-standalone"
version = "1.0.0"
description = "White-label M&A Advisory CRM+ERP — FastAPI standalone platform"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
    "psycopg2-binary>=2.9.9",
    "python-dateutil>=2.9.0",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "alembic>=1.13.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "factory-boy>=3.3.0",
    "ruff>=0.2.0",
]
watermarking = [
    "PyPDF2>=3.0.0",
    "reportlab>=4.0.0",
]
celery = [
    "celery>=5.3.0",
    "redis>=5.0.0",
]
reporting = [
    "openpyxl>=3.1.0",
    "weasyprint>=61.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short --cov=app --cov-report=term-missing"
